--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/AndreyShuleiko/thing-it-bacnet-server#readme",
   "devDependencies": {
+    "@types/bluebird": "^3.5.20",
     "@types/chai": "^4.1.2",
     "@types/lodash": "^4.14.103",
     "@types/mocha": "^2.2.48",
