--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "test": "gulp watch:test:unit",
-    "start": "gulp watch:build:code ",
+    "start": "npm run build && node ./dist/index.js",
     "build": "gulp build:code"
   },
   "repository": {
