--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^9.4.6",
     "@types/sinon": "^4.1.3",
     "@types/winston": "^2.3.8",
+    "@types/yargs": "^11.0.0",
     "chai": "^4.1.2",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
@@ -43,6 +44,7 @@
     "lodash": "^4.17.5",
     "moment": "^2.20.1",
     "rxjs": "^5.5.6",
-    "winston": "^2.4.0"
+    "winston": "^2.4.0",
+    "yargs": "^11.0.0"
   }
 }
