change: move scan launch & CLI args handling to 'start.ts' file
remove scan launch from index file for usage from thing-id-device-bacnet-scan

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "./dist/index.js",
     "scripts": {
         "test": "gulp watch:test:unit",
-        "start": "npm run build && node ./dist/index.js",
+        "start": "npm run build && node ./dist/start.js",
         "build": "gulp build:code"
     },
     "repository": {
