--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "gulp watch:test:unit",
         "start": "npm run build && node ./dist/start.js",
         "build": "gulp build:code",
-        "postinstall": "npm install --ignore-scripts && gulp build:code"
+        "postinstall": "npm install --ignore-scripts && gulp build:prod"
     },
     "repository": {
         "type": "git",
@@ -34,6 +34,7 @@
         "gulp-mocha": "^5.0.0",
         "gulp-tslint": "^8.1.3",
         "gulp-typescript": "^4.0.1",
+        "merge2": "^1.2.3",
         "mocha": "^5.0.1",
         "run-sequence": "^2.2.1",
         "sinon": "^4.3.0",
