--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "gulp watch:test:unit",
         "start": "gulp build:code && node ./dist/start.js",
-        "build": "gulp build:prod"
+        "build": "gulp build:prod",
+        "postversion": "npm run build && git push && git push --tags && npm publish /dist"
     },
     "repository": {
         "type": "git",
